--- a/netaccess/matman/templates/matman/material_detail.html
+++ b/netaccess/matman/templates/matman/material_detail.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load matman_tags %}
+{% load crispy_forms_tags %}
 
 {% block title %}Material Details{% endblock %}
 
@@ -7,9 +8,19 @@
 {% with borrow=object.get_active_borrow %}
 <h1>{{ object }}</h1>
 <section>
-    {% if object.pictures.all %}
-    {% include "matman/slideshow.html" with pictures=object.pictures %}
-    {% endif %}
+
+    <!--    Buttons    -->
+    <div class="d-flex">
+        <a class="btn btn-secondary m-1" href="{% url "material-edit" object.identifier %}">Edit</a>
+        {% if not object.get_active_borrow %}
+        <a class="btn btn-primary m-1" href="{% url "borrow" object.identifier %}">Borrow Item</a>
+        {% endif %}
+        {% if object.get_active_borrow %}
+        <a class="btn btn-primary m-1" href="{% url "return" object.get_active_borrow.pk %}">Return Item</a>
+        {% endif %}
+    </div>
+
+    <!--    Details Table    -->
     <table class="table table-striped table-hover d-inline-flex my-3">
         <tr>
             <th>Serial Number:</th>
@@ -52,23 +63,32 @@
             <td>{{ object.get_active_borrow.borrowed_at|date }}</td>
         </tr>
     </table>
+
+    <!--    Description    -->
     <h4>Description</h4>
-        <section class="border border-dark rounded">
-            {{ object.description|markdown }}
-        </section>
-    <h4>Borrow Notes</h4>
-        <section class="border border-dark rounded">
-            {{ borrow.notes|markdown }}
-        </section>
-    <div class="d-flex">
-        <a class="btn btn-secondary m-1" href="{% url "material-edit" object.identifier %}">Edit</a>
-        {% if object.owner != user and not object.get_active_borrow %}
-        <a class="btn btn-primary m-1" href="{% url "borrow" object.identifier %}">Borrow Item</a>
-        {% endif %}
-        {% if object.get_active_borrow.borrowed_by == user %}
-        <a class="btn btn-primary m-1" href="{% url "return" object.identifier %}">Return Item</a>
+    <div class="border border-dark rounded">
+        {% if object.description %}}
+        {{ object.description|markdown }}
+        {% else %}
+        No description available.
         {% endif %}
     </div>
-</section>
+
+    <!--    Pictures    -->
+    {% if object.pictures.all %}
+    {% include "matman/slideshow.html" with pictures=object.pictures %}
+    {% endif %}
+
+    <!--    Comments and Borrows in chronological order    -->
+    <h4>Comments & Borrows</h4>
+    {% for cb in comments_borrows %}
+    {% if cb.type == "comment" %}
+    {% include "matman/comment.html" with comment=cb.object %}
+    {% else %}
+    {% include "matman/borrow_toast.html" with borrow=cb.object %}
+    {% endif %}
+    {% endfor %}
+
+    {% crispy comment_form %}
 {% endwith %}
 {% endblock %}
