--- a/netaccess/matman/templates/matman/search.html
+++ b/netaccess/matman/templates/matman/search.html
@@ -6,18 +6,14 @@
 {% block content %}
 <h1>Search Material</h1>
 <p>Enter an identifier, one or more tags or any other criteria to search for:</p>
-<form method="get">
-    {% crispy form %}
-    <div>
-        <input type="submit" value="Search" class="btn btn-primary">
-    </div>
-</form>
+{% crispy form %}
 {% if query %}
 <section>
   <h2>Results ({{ results.count }})</h2>
   {% if results %}
   <table class="table table-striped table-hover">
       <tr>
+          <th>Rank</th>
           <th>ID</th>
           <th>Serial Number</th>
           <th>Material Number</th>
@@ -29,6 +25,7 @@
       </tr>
   {% for object in results %}
       <tr>
+          <th>{{ object.rank }}</th>
           <th><a href="{% url "material-detail" object.identifier %}">{{ object.identifier }}</a></th>
           <td>{{ object.serial_number }}</td>
           <td>{{ object.material_number }}</td>
