--- a/netaccess/users/templates/registration/login.html
+++ b/netaccess/users/templates/registration/login.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
 
 {% block title %}Log-in{% endblock %}
 
@@ -12,12 +13,5 @@
   {% else %}
 <!--    <p>Please, use the following form to log-in. If you don't have an account <a href="% url "register" %">register here</a></p>-->
   {% endif %}
-  <div class="login-form">
-    <form action="{% url 'login' %}" method="post">
-      {{ form.as_p }}
-      {% csrf_token %}
-      <input type="hidden" name="next" value="{{ next }}" />
-      <p><input type="submit" value="Log-in"></p>
-    </form>
-  </div>
+{% crispy form %}
 {% endblock %}
