--- a/netaccess/matman/templates/matman/material_edit.html
+++ b/netaccess/matman/templates/matman/material_edit.html
@@ -1,7 +1,14 @@
 {% extends "base.html" %}
+{% load static %}
+{% load matman_tags %}
 {% load crispy_forms_tags %}
 
 {% block title %}Edit Material{% endblock %}
+
+{% block scripts %}
+    <script type="text/javascript" src="{% static "js/dynamic_formset.js" %}" defer></script>
+{% init_mde "id_description" %}
+{% endblock %}
 
 {% block content %}
 <h1>Edit material {{ object }}</h1>
@@ -9,9 +16,26 @@
     {% csrf_token %}
     {% crispy form %}
     <h3>Pictures</h3>
-    {% crispy formset formset_helper %}
-    <div>
-        <input type="submit" value="Save" name="save" class="btn btn-primary">
+    {% crispy formset.management_form %}
+    <div class="drag-container">
+        {% for form in formset %}
+        {% crispy form formset_helper %}
+        {% endfor %}
+<!--        {% crispy formset formset_helper %}-->
+    </div>
+    <button type="button" name="add" class="btn btn-outline-primary m-1" id="add-more">
+        <svg class="bi flex-1" role="img" aria-label="Info:"><use xlink:href="#plus"/></svg>
+        Add Picture
+    </button>
+    <div class="form-buttons m-1">
+        <button id="buttonSave" type="submit" value="Save" name="save" class="btn btn-primary" onclick="this.classList.add('loading')">
+            <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+            <span class="button-text">Save</span>
+        </button>
+        <button id="buttonAddAnother" type="submit" value="Save and add another" name="add_other" class="btn btn-secondary" onclick="this.classList.add('loading')">
+            <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+            <span class="button-text">Save and add another</span>
+        </button>
     </div>
 </form>
 {% endblock %}
