--- a/netaccess/matman/templates/matman/borrow_toast.html
+++ b/netaccess/matman/templates/matman/borrow_toast.html
@@ -10,8 +10,8 @@
       {% endif %}
     </small>
     <div class="dropdown">
-      <button class="btn btn-outline-secondary btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-        Actions
+      <button class="btn btn-outline-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+        <svg class="bi flex-shrink-0" role="img" aria-label="Info:"><use xlink:href="#three-dots"/></svg>
       </button>
       <ul class="dropdown-menu">
         {%if not borrow.returned_at %}
