--- a/netaccess/matman/templates/matman/material_list.html
+++ b/netaccess/matman/templates/matman/material_list.html
@@ -6,7 +6,10 @@
 {% block content %}
 <h1>Materials</h1>
 <p>
-    <a href="{% url "add-material" %}" class="btn btn-outline-success" aria-current="page">Add Material</a>
+    <a href="{% url "add-material" %}" class="btn btn-outline-primary" aria-current="page">
+        <svg class="bi flex-1" role="img" aria-label="Info:"><use xlink:href="#plus"/></svg>
+        Add Material
+    </a>
 </p>
 <table class="table table-striped table-hover">
     <tr>
@@ -18,6 +21,7 @@
         <th>Location</th>
         <th>Owner</th>
         <th>Tags</th>
+        <th></th>
     </tr>
     {% for object in object_list %}
     <tr>
@@ -29,6 +33,17 @@
         <td>{{ object.location }}</td>
         <td><a href="{% url "profile" object.owner %}">{{ object.owner }}</a></td>
         <td>{{ object.tags.all|join:", " }}</td>
+        <td>
+            <div class="dropdown">
+                <button class="btn btn-outline-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <svg class="bi flex-shrink-0" role="img" aria-label="Info:"><use xlink:href="#three-dots"/></svg>
+                </button>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="{% url "material-edit" object.identifier %}">Edit</a></li>
+                  <li><a class="dropdown-item" href="{% url "add-material" %}?reference={{ object.identifier }}">Copy/Clone</a></li>
+                </ul>
+            </div>
+        </td>
     </tr>
     {% endfor %}
 </table>
