--- a/netaccess/matman/templates/pagination.html
+++ b/netaccess/matman/templates/pagination.html
@@ -3,9 +3,17 @@
     <ul class="pagination">
         {% if page_obj.has_previous %}
         <li class="page-item"><a class="page-link" href="?{% get_params %}{{ page_param }}=1">First</a></li>
-        <li class="page-item"><a class="page-link" href="??{% get_params %}{{ page_param }}={{ page_obj.previous_page_number }}">Previous</a></li>
+        <li class="page-item"><a class="page-link" href="?{% get_params %}{{ page_param }}={{ page_obj.previous_page_number }}">Previous</a></li>
         {% endif %}
-        <li class="page-item"><a class="page-link active" href="#">{{ page_obj.number }}</a></li>
+
+        {% for i in page_obj.paginator.page_range %}
+          {% if page_obj.number == i %}
+            <li class="page-item"><a class="page-link active" href="#">{{ i }}</a></li>
+          {% else %}
+            <li class="page-item"><a class="page-link" href="?{% get_params %}{{ page_param }}={{ i }}">{{ i }}</a></li>
+          {% endif %}
+        {% endfor %}
+
         {% if page_obj.has_next %}
         <li class="page-item"><a class="page-link" href="?{% get_params %}{{ page_param }}={{ page_obj.next_page_number }}">Next</a></li>
         <li class="page-item"><a class="page-link" href="?{% get_params %}{{ page_param }}={{ page_obj.paginator.num_pages }}">Last</a></li>
