Minor styling changes

--- a/netaccess/matman/templates/header.html
+++ b/netaccess/matman/templates/header.html
@@ -35,7 +35,7 @@
               </ul>
               <form class="d-flex" role="search" action="{% url "search" %}" method="get">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="query">
-                <button class="btn btn-outline-success" type="submit">
+                <button class="btn btn-outline-primary" type="submit">
                     <svg class="bi bi-search" role="img" aria-label="Info:"><use xlink:href="#lens"/></svg>
                 </button>
               </form>
