--- a/netaccess/matman/templates/matman/material_create.html
+++ b/netaccess/matman/templates/matman/material_create.html
@@ -7,6 +7,8 @@
 
 {% block scripts %}
 <script type="text/javascript" src="{% static "js/dynamic_formset.js" %}" defer></script>
+<script type="text/javascript" src="{% static "js/autocomplete.js" %}" defer></script>
+<link href="{% static "css/autocomplete.css" %}" rel="stylesheet">
 {% init_mde "id_description" %}
 {% endblock %}
 
