--- a/netaccess/matman/templates/pagination.html
+++ b/netaccess/matman/templates/pagination.html
@@ -1,4 +1,5 @@
 {% load matman_tags %}
+{% if page_obj.paginator.num_pages > 1 %}
 <nav aria-label="Page navigation example">
     <ul class="pagination">
         {% if page_obj.has_previous %}
@@ -9,7 +10,7 @@
         {% for i in page_obj.paginator.page_range %}
           {% if page_obj.number == i %}
             <li class="page-item"><a class="page-link active" href="#">{{ i }}</a></li>
-          {% else %}
+          {% elif i > page_obj.number|add:'-3' and i < page_obj.number|add:'3' %}
             <li class="page-item"><a class="page-link" href="?{% get_params %}{{ page_param }}={{ i }}">{{ i }}</a></li>
           {% endif %}
         {% endfor %}
@@ -20,3 +21,4 @@
         {% endif %}
     </ul>
 </nav>
+{% endif %}
