--- a/netaccess/matman/templates/matman/material_detail.html
+++ b/netaccess/matman/templates/matman/material_detail.html
@@ -26,6 +26,36 @@
     </div>
 
     <!--    Details Table    -->
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <p>Serial Number:</p>
+                <p>{{ object.serial_number }}</p>
+            </div>
+            <div class="col">
+                <p>Material Number:</p>
+                <p>{{ object.material_number }}</p>
+            </div>
+            <div class="col">
+                <p>Revision:</p>
+                <p>{{ object.revision }}</p>
+            </div>
+            <div class="col">
+                <p>Manufacturer:</p>
+                <p>{{ object.manufacturer }}</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <p>Location:</p>
+                <p>{{ object.location }}</p>
+            </div>
+            <div class="col">
+                <p>Owner:</p>
+                <p>{{ object.Owner }}</p>
+            </div>
+        </div>
+    </div>
     <table class="table table-striped table-hover d-inline-flex my-3">
         <tr>
             <th>Serial Number:</th>
