Implemented test for bookmarking

--- a/netaccess/matman/templates/matman/material_list.html
+++ b/netaccess/matman/templates/matman/material_list.html
@@ -43,7 +43,7 @@
                   <li><a class="dropdown-item" href="{% url "add-material" %}?reference={{ object.identifier }}">Copy/Clone</a></li>
                 </ul>
             </div>
-            <button class="btn btn-outline-secondary p-1" type="button">
+            <button class="btn btn-outline-secondary p-1" type="button" title="Bookmark">
                 <svg class="bi flex-shrink-0" role="img" aria-label="Info:"><use xlink:href="#bookmark"/></svg>
             </button>
         </td>
