intermediary commit while refactoring search

--- a/netaccess/matman/templates/matman/material_list.html
+++ b/netaccess/matman/templates/matman/material_list.html
@@ -43,9 +43,11 @@
                   <li><a class="dropdown-item" href="{% url "add-material" %}?reference={{ object.identifier }}">Copy/Clone</a></li>
                 </ul>
             </div>
+            {% if user.is_authenticated %}
             <button class="btn btn-outline-secondary p-1" type="button" title="Bookmark">
                 <svg class="bi flex-shrink-0" role="img" aria-label="Info:"><use xlink:href="#bookmark"/></svg>
             </button>
+            {% endif %}
         </td>
     </tr>
     {% endfor %}
