--- a/netaccess/matman/templates/header.html
+++ b/netaccess/matman/templates/header.html
@@ -1,12 +1,14 @@
         <nav class="navbar navbar-expand-lg bg-light">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">MatMan</a>
+            <a class="navbar-brand" href="{% url "quick-borrow" %}">MatMan</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
+                <li class="nav-item">
+                    <a href="{% url "quick-borrow" %}" class="nav-link" aria-current="page">Quick Borrow</a>
+                </li>
                 <li class="nav-item">
                     <a href="{% url "home" %}" class="nav-link" aria-current="page">Home</a>
                 </li>
