--- a/netaccess/matman/templates/header.html
+++ b/netaccess/matman/templates/header.html
@@ -13,7 +13,7 @@
                     <a href="{% url "home" %}" class="nav-link" aria-current="page">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="{% url "list-material" %}" class="nav-link" aria-current="page">All Materials</a>
+                    <a href="{% url "list-material" %}" class="nav-link" aria-current="page">Search</a>
                 </li>
                 <li class="nav-item">
                     <a href="{% url "list-schemes" %}" class="nav-link" aria-current="page">Schemes</a>
@@ -35,12 +35,12 @@
                   </ul>
                 </li>
               </ul>
-              <form class="d-flex" role="search" action="{% url "search" %}" method="get">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="query">
-                <button class="btn btn-outline-primary" type="submit">
-                    <svg class="bi bi-search" role="img" aria-label="Info:"><use xlink:href="#lens"/></svg>
-                </button>
-              </form>
+<!--              <form class="d-flex" role="search" action="{% url "search" %}" method="get">-->
+<!--                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="query">-->
+<!--                <button class="btn btn-outline-primary" type="submit">-->
+<!--                    <svg class="bi bi-search" role="img" aria-label="Info:"><use xlink:href="#lens"/></svg>-->
+<!--                </button>-->
+<!--              </form>-->
             </div>
           </div>
         </nav>
