--- a/netaccess/matman/templates/matman/material_list.html
+++ b/netaccess/matman/templates/matman/material_list.html
@@ -1,8 +1,19 @@
 {% extends "base.html" %}
+{% load static %}
 {% load matman_tags %}
 {% load crispy_forms_tags %}
 
 {% block title %}Material{% endblock %}
+
+{% block scripts %}
+<script type="text/javascript" src="{% static "js/autocomplete.js" %}"></script>
+<link href="{% static "css/autocomplete.css" %}" rel="stylesheet">
+<script defer>
+    window.onload = function() {
+        suggest_tags(document.getElementById("id_tags__name"));
+    };
+</script>
+{% endblock %}
 
 {% block content %}
 <h1>Materials</h1>
@@ -12,10 +23,24 @@
         Add Material
     </a>
 </p>
-<form method="get">
-    {{ filterset.form|crispy }}
-    <input type="submit" value="Search" class="btn btn-primary">
-</form>
+<div class="accordion" id="accordionExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingOne">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+        Filters
+      </button>
+    </h2>
+    <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <form method="get">
+          {{ filterset.form|crispy }}
+          <input type="submit" value="Search" class="btn btn-primary">
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
 <table class="table table-striped table-hover">
     <tr>
         <th>ID</th>
