--- a/netaccess/matman/templates/matman/scheme_list.html
+++ b/netaccess/matman/templates/matman/scheme_list.html
@@ -7,7 +7,7 @@
 <h1>Schemes</h1>
 <p>
     <a href="{% url "add-scheme" %}" class="btn btn-outline-primary" aria-current="page">
-        <svg class="bi flex-1" role="img" aria-label="Info:"><use xlink:href="#plus"/></svg>
+        <svg class="bi flex-1" role="img" aria-label="Info:"><use xlink:href="#symbol-plus"/></svg>
         Add Scheme
     </a>
 </p>
