--- a/netaccess/matman/templates/matman/borrow_toast.html
+++ b/netaccess/matman/templates/matman/borrow_toast.html
@@ -1,7 +1,7 @@
 {% load matman_tags %}
 <div class="toast show my-1 w-100" role="alert" aria-live="assertive" aria-atomic="true">
   <div class="toast-header">
-    <svg class="bi flex-shrink-0 me-2" role="img" aria-label="Info:"><use xlink:href="#box-filled-icon"/></svg>
+    <svg class="bi flex-shrink-0 me-2" role="img" aria-label="Info:"><use xlink:href="#symbol-borrow"/></svg>
     <strong class="me-auto">Borrow by <a href="{% url "profile" borrow.borrowed_by %}">{{ borrow.borrowed_by.username }}</a></strong>
     <small class="mx-2">
       {{ borrow.borrowed_at|date:"D y-m-d H:m" }}
