--- a/netaccess/matman/templates/matman/material_detail.html
+++ b/netaccess/matman/templates/matman/material_detail.html
@@ -1,30 +1,56 @@
 {% extends "base.html" %}
+{% load static %}
 {% load matman_tags %}
 {% load crispy_forms_tags %}
 
 {% block title %}Material Details{% endblock %}
 
 {% block scripts %}
+<script type="text/javascript" src="{% static "js/autocomplete.js" %}"></script>
+<link href="{% static "css/autocomplete.css" %}" rel="stylesheet">
 {% init_mde "id_text" %}
 {% endblock %}
 
 {% block content %}
 {% with borrow=object.get_active_borrow %}
+<!--    Buttons    -->
+<section class="d-flex">
+    <a class="btn btn-outline-secondary m-1" href="{% url "material-edit" object.identifier %}">
+        <svg class="bi flex-shrink-0" role="img" aria-label="Info:"><use xlink:href="#edit"/></svg>
+        <spa>Edit</spa>
+    </a>
+    {% if not object.get_active_borrow %}
+    <a class="btn btn-outline-secondary m-1" href="{% url "borrow" object.identifier %}">
+        <svg class="bi flex-shrink-0" role="img" aria-label="Info:"><use xlink:href="#symbol-borrow"/></svg>
+        <span>Borrow</span>
+    </a>
+    {% endif %}
+    {% if object.get_active_borrow %}
+    <a class="btn btn-primary m-1" href="{% url "return" object.get_active_borrow.pk %}">
+        <svg class="bi flex-shrink-0" role="img" aria-label="Info:"><use xlink:href="#symbol-borrow"/></svg>
+        <spa>Return Item</spa>
+    </a>
+    {% endif %}
+    <a class="btn btn-outline-secondary m-1" href="{% url "add-material" %}?reference={{ object.identifier }}">
+        <svg class="bi flex-shrink-0" role="img" aria-label="Info:"><use xlink:href="#clone"/></svg>
+        <spa>Copy/Clone</spa>
+    </a>
+    {% if user.is_authenticated %}
+    {% if is_bookmarked %}
+    <button class="btn btn-outline-secondary m-1" type="button" title="Bookmarked" value="{{ object.identifier }}" id="id_button_bookmark_{{ object.identifier }}" onclick="toggle_bookmark(this)">
+        <svg class="bi flex-shrink-0" role="img" aria-label="Info:"><use xlink:href="#bookmark-check-fill"/></svg>
+        <span class="text">Bookmarked</span>
+    </button>
+    {% else %}
+    <button class="btn btn-outline-secondary m-1" type="button" title="Bookmark" value="{{ object.identifier }}" id="id_button_bookmark_{{ object.identifier }}" onclick="toggle_bookmark(this)">
+        <svg class="bi flex-shrink-0" role="img" aria-label="Info:"><use xlink:href="#bookmark"/></svg>
+        <span class="text">Bookmark</span>
+    </button>
+    {% endif %}
+    {% endif %}
+</section>
 <h1>{{ object }}</h1>
 <section>
-
-    <!--    Buttons    -->
-    <div class="d-flex">
-        <a class="btn btn-secondary m-1" href="{% url "material-edit" object.identifier %}">Edit</a>
-        {% if not object.get_active_borrow %}
-        <a class="btn btn-primary m-1" href="{% url "borrow" object.identifier %}">Borrow Item</a>
-        {% endif %}
-        {% if object.get_active_borrow %}
-        <a class="btn btn-primary m-1" href="{% url "return" object.get_active_borrow.pk %}">Return Item</a>
-        {% endif %}
-        <a class="btn btn-outline-secondary m-1" href="{% url "add-material" %}?reference={{ object.identifier }}">Copy/Clone</a>
-    </div>
-
     <!--    Details Table    -->
     <div class="container">
         <div class="row">
@@ -124,6 +150,7 @@
     {% endif %}
     {% endfor %}
 
+    <h2>Add Comment</h2>
     {% crispy comment_form %}
 {% endwith %}
 {% endblock %}
