--- a/netaccess/matman/templates/matman/material_list.html
+++ b/netaccess/matman/templates/matman/material_list.html
@@ -19,7 +19,7 @@
 <h1>Materials</h1>
 <p>
     <a href="{% url "add-material" %}" class="btn btn-outline-primary" aria-current="page">
-        <svg class="bi flex-1" role="img" aria-label="Info:"><use xlink:href="#plus"/></svg>
+        <svg class="bi flex-1" role="img" aria-label="Info:"><use xlink:href="#symbol-plus"/></svg>
         Add Material
     </a>
 </p>
@@ -66,7 +66,7 @@
         <td>{{ object.tags.all|join:", " }}</td>
         <td class="d-flex flex-row">
             <div class="dropdown p-1">
-                <button class="btn btn-outline-secondary p-1" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <button class="btn btn-outline-secondary m-1" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                   <svg class="bi flex-shrink-0" role="img" aria-label="Info:"><use xlink:href="#three-dots"/></svg>
                 </button>
                 <ul class="dropdown-menu">
@@ -76,11 +76,11 @@
             </div>
             {% if user.is_authenticated %}
             {% if object in bookmarked %}
-            <button class="btn btn-outline-secondary p-1" type="button" title="Unbookmark" value="{{ object.identifier }}" id="id_button_bookmark_{{ object.identifier }}" onclick="toggle_bookmark(this)">
+            <button class="btn btn-outline-secondary m-1" type="button" title="Bookmarked" value="{{ object.identifier }}" id="id_button_bookmark_{{ object.identifier }}" onclick="toggle_bookmark(this)">
                 <svg class="bi flex-shrink-0" role="img" aria-label="Info:"><use xlink:href="#bookmark-check-fill"/></svg>
             </button>
             {% else %}
-            <button class="btn btn-outline-secondary p-1" type="button" title="Bookmark" value="{{ object.identifier }}" id="id_button_bookmark_{{ object.identifier }}" onclick="toggle_bookmark(this)">
+            <button class="btn btn-outline-secondary m-1" type="button" title="Bookmark" value="{{ object.identifier }}" id="id_button_bookmark_{{ object.identifier }}" onclick="toggle_bookmark(this)">
                 <svg class="bi flex-shrink-0" role="img" aria-label="Info:"><use xlink:href="#bookmark"/></svg>
             </button>
             {% endif %}
