--- a/netaccess/matman/templates/matman/material_edit.html
+++ b/netaccess/matman/templates/matman/material_edit.html
@@ -27,17 +27,14 @@
         {% crispy formset formset_helper %}
     </div>
     <button type="button" name="add" class="btn btn-outline-primary m-1" id="add-more">
-        <svg class="bi flex-1" role="img" aria-label="Info:"><use xlink:href="#plus"/></svg>
-        Add Picture
+        <svg class="bi flex-1" role="img" aria-label="Info:"><use xlink:href="#symbol-plus"/></svg>
+        <span>Add Picture</span>
     </button>
     <div class="form-buttons m-1">
         <button id="buttonSave" type="submit" value="Save" name="save" class="btn btn-primary" onclick="this.classList.add('loading')">
             <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+            <svg class="bi flex-1" role="img" aria-label="Info:"><use xlink:href="#symbol-save"/></svg>
             <span class="button-text">Save</span>
-        </button>
-        <button id="buttonAddAnother" type="submit" value="Save and add another" name="add_other" class="btn btn-secondary" onclick="this.classList.add('loading')">
-            <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-            <span class="button-text">Save and add another</span>
         </button>
     </div>
 </form>
